# bb-sapi-python-sdk

./: .gitignore  README.md  pyproject.toml
.github/workflows/: create-release-branch.yaml  create-release.yaml  pr-checks.yaml  publish.yaml
bb_sapi/: __init__.py  auth.py  client.py  exceptions.py  upload.py
bb_sapi/entities/: __init__.py  analytics.py  lineitem.py  mediaclip.py
examples/: analytics_export.py
tests/: test_auth.py  test_client.py  test_upload.py
