[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bb-sapi-python-sdk"
version = "0.1.0"
description = "Python SDK for the Blue Billywig Streaming API (SAPI)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-mock>=3",
    "responses>=0.25",
    "openpyxl>=3.1",   # for the analytics export example
]

[tool.hatch.build.targets.wheel]
packages = ["bb_sapi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
