[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bb-sapi-python-sdk"
version = "0.1.0"
description = "Python SDK for the Blue Billywig Streaming API (SAPI)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Blue Billywig", email = "support@bluebillywig.com" },
]
keywords = ["blue billywig", "sapi", "video", "streaming", "ovp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "requests>=2.28",
]

[project.urls]
Homepage = "https://github.com/bluebillywig/bb-sapi-python-sdk"
Repository = "https://github.com/bluebillywig/bb-sapi-python-sdk"
"Bug Tracker" = "https://github.com/bluebillywig/bb-sapi-python-sdk/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-mock>=3",
    "responses>=0.25",
    "openpyxl>=3.1",   # for the analytics export example
]

[tool.hatch.build.targets.wheel]
packages = ["bb_sapi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
